k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casalunak8s
  namespace: casalunak8s
spec:
  selector:
    matchLabels:
      app: casalunak8s
  replicas: 1
  template:
    metadata:
      labels:
         app: casalunak8s
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: estudiante
           image: casalunaimage
           ports:
              - containerPort: 8080
           
---
apiVersion: v1
kind: Service
metadata:
  name: <nombre del service>
  namespace: casalunak8s
spec:
  selector:
    app: estudiante
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
