k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casalunak8s
  namespace: casalunak8s
spec:
   ingressClassName: public
   rules:
   - host: 
     http:
       paths:
       - path: /api/javeriana/estudiante
         pathType: Prefix
         backend:
           service:
             name: casalunaservice
             port:
               number: 8080
